--- a/MEChallenge/MEChallenge.Application/MEChallenge.Application.csproj
+++ b/MEChallenge/MEChallenge.Application/MEChallenge.Application.csproj
@@ -1,18 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flunt" Version="1.0.5" />
+    <PackageReference Include="Mapster" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MEChallenge.Application\MEChallenge.Application.csproj" />
     <ProjectReference Include="..\MEChallenge.CrossCutting.ViewModels\MEChallenge.CrossCutting.ViewModels.csproj" />
-    <ProjectReference Include="..\MEChallenge.Data\MEChallenge.Data.csproj" />
+    <ProjectReference Include="..\MEChallenge.Domain\MEChallenge.Domain.csproj" />
   </ItemGroup>
-
 
 </Project>
